Añadido CRUD Producto Funcional

--- a/tienda/templates/tienda/productos_list.html
+++ b/tienda/templates/tienda/productos_list.html
@@ -45,7 +45,7 @@
           <td>{{x.nombre}}</td>
           <td>{{x.descripcion}}</td>
           <td>{{x.id_categoria}}</td>
-          <td>{{x.precioo}}</td>
+          <td>{{x.precio}}</td>
           <td><a href="{% url 'productos_findEdit' pk=x.id_producto %}">Modificar</a></td>
           <td><a href="{% url 'productos_del' pk=x.id_producto %}">Eliminar</a></td>
         </tr>
