--- a/tienda/templates/tienda/productos_edit.html
+++ b/tienda/templates/tienda/productos_edit.html
@@ -33,7 +33,7 @@
         <pre>Categoría: <select name="categoria">
           {% for categoria in categorias %}
             {% if categoria.categoria == producto.id_categoria.categoria %}
-            <option value="{{categoria.id_categoria}}">{{categoria.categoria}}</option>
+            <option value="{{categoria.id_categoria}}" selected>{{categoria.categoria}}</option>
             {% else %}
             <option value="{{categoria.id_categoria}}">{{categoria.categoria}}</option>
             {% endif %}
@@ -43,8 +43,6 @@
         <input type="submit" name="opcion" value="Actualizar">
       </form> <br> <br>
     {% endif %}
-    <a href="{% url 'crud' %}">Volver</a>
-    <br>
     <div id="idMensajes">
       {% if mensaje %}
         {{mensaje}}
