--- a/tienda/templates/tienda/categorias_add.html
+++ b/tienda/templates/tienda/categorias_add.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Florería</title>
-
+  
   <!--
-  <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
   <script src="{% static 'js/main.js' %}"></script>
   -->
 
@@ -17,40 +17,28 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <h1>Editar datos de las categorías</h1>
-  <br>
+  
+  <div style="text-align: center;">
+    <h1>Añadir categoría</h1>
 
-  <button type="button">
-    <a href="{% url 'categoriasAdd' %}"> Agregar </a>
-  </button>
+    <form action="" method="post">
+      {% csrf_token %}
+      {{form.as_p}}
 
-  <div id="idMensajes">
-    {% if mensaje %}
-      {{mensaje}}
-    {% endif %}
+      <input type="submit" value="Agregar">
+    </form> <br> <br>
+
+    <div id="idMensajes">
+      {% if mensaje %}
+        {{mensaje}}
+      {% endif %}
+    </div>
+
+    <a href="{% url 'crud_categorias' %}">Volver</a>
+    <br>
   </div>
-
-  <table>
-    {% if categorias %}
-      <th>Categoría</th>
-      <th>Modificar</th>
-      <th>Eliminar</th>
-      {% for x in categorias %}
-        <tr>
-          <td>{{x.categoria}}</td>
-          <td><a href="{% url 'categorias_edit' pk=x.id_categoria %}">Modificar</a></td>
-          <td><a href="{% url 'categorias_del' pk=x.id_categoria %}">Eliminar</a></td>
-        </tr>
-      {% endfor %}
-    {% endif %}
-  </table>
-
+  
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function() {
-      $('#idMensajes').delay(2000).fadeOut('slow');
-    });
-  </script>
 </body>
 </html>
