--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -34,14 +34,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#" id="link-maceteros">🪴 Maceteros</a>
-            <a class="nav-link active" href="#" id="link-sustratos">✨ Sustratos</a>
-            <a class="nav-link active" href="#" id="link-flores">🌺 Flores</a>
-            <a class="nav-link active" href="#" id="link-arbustos">🌳 Arbustos</a>
+            <a class="nav-link active" aria-current="page" href="#" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
+            <a class="nav-link active" href="#" id="link-sustratos"> CRUD</a>
             <a class="nav-link active" href="#" id="link-carrito"><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i> <b>Carrito</b></a>
         </div>
         <div class="navbar-nav ms-auto">
-          <button type="button" class="btn btn-dark btn-navbar" id="btn-tema"><i class="bi bi-brightness-alt-high-fill" id="toggler-tema"></i></button>
+          <button type="button" class="btn btn-dark btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
           <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="iniciosesion.html" id="link-iniciar-sesion">Iniciar sesión</a></button>
           <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="registro.html" id="link-registrarse">Registrarse</a></button>
         </div>
@@ -159,20 +157,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function () {
-    // cambiar data-bs-theme con toggle
-    $('#btn-tema').on('click', function () {
-      // cambiar en click si es light a dark y viceversa
-      if ($('body').attr('data-bs-theme') == 'light') {
-        $('body').attr('data-bs-theme', 'dark');
-        $('#toggler-tema').removeClass('bi-brightness-alt-high-fill').addClass('bi-moon-fill');
-      } else {
-        $('body').attr('data-bs-theme', 'light');
-        $('#toggler-tema').removeClass('bi-moon-fill').addClass('bi-brightness-alt-high-fill');    
-      }});
-    });
-  </script>
+  <!-- JS en static -->
+  <script src="{% static 'tienda/js/tema.js' %}"></script>
 </body>
 
 </html>
