--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -27,7 +27,7 @@
   <div id="navegacion">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbarPrincipal">
       <div class="container-fluid d-flex flex-row">
-        <a class="navbar-brand" href="indice.html">Florería <i class="fa-solid fa-leaf" style="color: #ffffff;"></i></a>
+        <a class="navbar-brand" href="indice.html">Florería <i class="fa-solid fa-leaf"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,8 +35,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
-            <a class="nav-link active" href="#" id="link-sustratos"> CRUD</a>
-            <a class="nav-link active" href="#" id="link-carrito"><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i> <b>Carrito</b></a>
+            <a class="nav-link active" href="#" id="link-sustratos">⚙️ CRUD</a>
+            <a class="nav-link active" href="#" id="link-carrito"><i class="fa-solid fa-cart-shopping"></i> <b>Carrito</b></a>
         </div>
         <div class="navbar-nav ms-auto">
           <button type="button" class="btn btn-dark btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
