--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -34,13 +34,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="{% url 'productos_list' %}" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
+            <a class="nav-link active" aria-current="page" href="#" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
             <a class="nav-link active" href="#" id="link-carrito"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
         </div>
         <div class="navbar-nav ms-auto">
           <button type="button" class="btn btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
-          <a class="nav-link active" href="#">⚙️ CRUD Productos</a>
-          <a class="nav-link active" href="#">⚙️ CRUD Categorías</a>
+          <a class="nav-link active" href="{% url 'productos_list' %}">⚙️ CRUD Productos</a>
+          <a class="nav-link active" href="{% url 'crud_categorias' %}">⚙️ CRUD Categorías</a>
             
           <!--  
           <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="iniciosesion.html" id="link-iniciar-sesion">Iniciar sesión</a></button>
