--- a/tienda/templates/tienda/productos_list.html
+++ b/tienda/templates/tienda/productos_list.html
@@ -39,9 +39,8 @@
         </div>
         <div class="navbar-nav ms-auto">
           <button type="button" class="btn btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
-          <a class="nav-link active" href="#">⚙️ CRUD Productos</a>
-          <a class="nav-link active" href="#">⚙️ CRUD Categorías</a>
-            
+          <a class="nav-link active" href="{% url 'productos_list' %}">⚙️ CRUD Productos</a>
+          <a class="nav-link active" href="{% url 'crud_categorias' %}">⚙️ CRUD Categorías</a>  
           <!--  
           <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="iniciosesion.html" id="link-iniciar-sesion">Iniciar sesión</a></button>
           <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="registro.html" id="link-registrarse">Registrarse</a></button>
