--- a/tienda/templates/tienda/productos_comprar.html
+++ b/tienda/templates/tienda/productos_comprar.html
@@ -65,10 +65,9 @@
             <img src="{{producto.imagen.url}}" class="card-img-top" alt="{{producto.nombre}}">
             <div class="card-body">
               <h5 class="card-title">{{producto.nombre}}</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h6 class="card-subtitle mb-2 text-body-secondary">${{producto.precio}}</h6>
+              <p class="card-text">{{producto.descripcion}}</p>
+              <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
         </div>
