Arreglado Pillow del proyecto

--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -64,7 +64,7 @@
         <div class="col-md-6 mb-4">
           <div class="card">
             <div class="card-body">
-              <img src="https://laderasur.com/wp-content/uploads/2024/01/a-knop.jpg" class="card-img-top" alt="...">
+              <img src="{% static 'tienda/images/Hortensia 1.webp' %}" class="card-img-top" alt="...">
               <h5 class="card-title">Hydrangea macrophylla - Hortensia</h5>
               <h6 class="card-subtitle mb-2 text-muted">$16.990</h6>
               <p class="card-text">Planta perenne de hoja caduca que aporta un estallido de color y elegancia a cualquier jardín.</p>
@@ -74,10 +74,10 @@
         <div class="col-md-6 mb-4">
           <div class="card">
             <div class="card-body">
-              <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTN_0iK99D9hJQYHSTn0dqOq-g6UI7rjgBweNBVvPwOs9TKnmEo2WudICFT-jyiAUxqCqgktshg34PcSuQBxZrTFH8UA4cBZ_hw_PjyKMA&usqp=CAE" class="card-img-top" alt="...">
-              <h5 class="card-title">Bulbos de Jacintos</h5>
+              <img src="{% static 'tienda/images/Rosal 1.webp' %}" class="card-img-top" alt="...">
+              <h5 class="card-title">Rosal</h5>
               <h6 class="card-subtitle mb-2 text-muted">$8.990</h6>
-              <p class="card-text">Planta bulbos rojos de jacinto en tu casa y disfruta el espectáculo cuando florecen en primavera!  </p>
+              <p class="card-text">Conocidos por sus hermosas y fragantes flores, que pueden tener una amplia variedad de colores y formas. Son ampliamente cultivados en jardines y paisajes por su valor estético.  </p>
             </div>
           </div>
         </div>
