--- a/tienda/templates/tienda/productos_comprar.html
+++ b/tienda/templates/tienda/productos_comprar.html
@@ -65,8 +65,10 @@
             <img src="{{producto.imagen.url}}" class="card-img-top" alt="{{producto.nombre}}">
             <div class="card-body">
               <h5 class="card-title">{{producto.nombre}}</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">{{producto.categoria}}</h6>
               <h6 class="card-subtitle mb-2 text-body-secondary">${{producto.precio}}</h6>
               <p class="card-text">{{producto.descripcion}}</p>
+              <h6 class="card-subtitle mb-2 text-body-secondary">Stock: {{producto.stock}}</h6>
               <a href="#" class="btn btn-primary">Añadir al carro</a>
             </div>
           </div>
