--- a/tienda/templates/tienda/categorias_add.html
+++ b/tienda/templates/tienda/categorias_add.html
@@ -4,41 +4,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Florería</title>
-  
-  <!--
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
-  <script src="{% static 'js/main.js' %}"></script>
-  -->
-
-  <!-- BootStrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <title>Añadir Categoría - Florería</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/0516098ee6.js" crossorigin="anonymous"></script>
+
+  <!-- Ionicons -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  
+  <!-- Estilos CSS -->
+  <link rel="stylesheet" href="{% static 'tienda/css/estilos.css' %}">
 </head>
-<body>
-  
-  <div style="text-align: center;">
-    <h1>Añadir categoría</h1>
-
-    <form action="" method="post">
-      {% csrf_token %}
-      {{form.as_p}}
-
-      <input type="submit" value="Agregar">
-    </form> <br> <br>
-
-    <div id="idMensajes">
-      {% if mensaje %}
-        {{mensaje}}
-      {% endif %}
-    </div>
-
-    <a href="{% url 'crud_categorias' %}">Volver</a>
-    <br>
+<body data-bs-theme="dark">
+  <!-- Navbar -->
+  <div id="navegacion">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbarPrincipal">
+      <div class="container-fluid d-flex flex-row">
+        <a class="navbar-brand" href="{% url 'inicio' %}">Florería <i class="fa-solid fa-leaf"></i></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="{% url 'productos_comprar' %}" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
+            <a class="nav-link active" href="{% url 'ver_carrito' %}" id="link-carrito"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+        </div>
+        <div class="navbar-nav ms-auto">
+          <button type="button" class="btn btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
+          
+          {% if user.is_authenticated %}
+          {% if user.is_staff %}
+            <a class="nav-link active" href="{% url 'productos_list' %}">⚙️ CRUD Productos</a>
+            <a class="nav-link active" href="{% url 'crud_categorias' %}">⚙️ CRUD Categorías</a>
+          {% endif %}
+          <div class="dropdown">
+            <a class = "nav-link dropdown-toggle" href = "#" role = "button" id = "dropdownMenuLink" data-bs-toggle = "dropdown" aria-expanded = "false">
+              {{ user.username }}
+            </a>
+            <div class = "dropdown-menu" aria-labelledby = "navbarDropdown">
+              <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="dropdown-item">Cerrar sesión</button>
+              </form>
+            </div>
+          </div>
+          {% else %}
+            <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="{% url 'login' %}" id="link-iniciar-sesion">Iniciar sesión</a></button>
+          {% endif %}
+          <!--  
+          <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="registro.html" id="link-registrarse">Registrarse</a></button>
+          -->
+        </div>
+      </div>
+    </nav>
   </div>
-  
+
+  <!-- Contenido -->
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Añadir Categoría</h1>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form action="" method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <div class="d-grid">
+            <input type="submit" value="Agregar" class="btn btn-primary">
+          </div>
+        </form>
+        <div id="idMensajes" class="mt-3">
+          {% if mensaje %}
+            <div class="alert alert-info">{{ mensaje }}</div>
+          {% endif %}
+        </div>
+        <div class="text-center mt-3">
+          <a href="{% url 'crud_categorias' %}" class="btn btn-secondary">Volver</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!-- JS en static -->
+  <script src="{% static 'tienda/js/tema.js' %}"></script>
 </body>
 </html>
