--- a/tienda/templates/tienda/productos_add.html
+++ b/tienda/templates/tienda/productos_add.html
@@ -1,12 +1,10 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Florería</title>
+  <title>Añadir Producto - Florería</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,7 +19,6 @@
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="{% static 'tienda/css/estilos.css' %}">
 </head>
-
 <body data-bs-theme="dark">
   <!-- Navbar -->
   <div id="navegacion">
@@ -35,86 +32,62 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="{% url 'productos_comprar' %}" id="link-maceteros">🌺🪴 Productos ✨🌳</a>
-            <a class="nav-link active" href="#" id="link-carrito"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+            <a class="nav-link active" href="{% url 'ver_carrito' %}" id="link-carrito"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
         </div>
         <div class="navbar-nav ms-auto">
           <button type="button" class="btn btn-navbar" id="btn-tema"><i class="bi bi-brightness-high-fill" id="toggler-tema"></i></button>
-          <a class="nav-link active" href="{% url 'productos_list' %}">⚙️ CRUD Productos</a>
-          <a class="nav-link active" href="{% url 'crud_categorias' %}">⚙️ CRUD Categorías</a>  
-          <!--  
-          <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="iniciosesion.html" id="link-iniciar-sesion">Iniciar sesión</a></button>
-          <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="registro.html" id="link-registrarse">Registrarse</a></button>
-          -->
+          {% if user.is_authenticated %}
+          {% if user.is_staff %}
+            <a class="nav-link active" href="{% url 'productos_list' %}">⚙️ CRUD Productos</a>
+            <a class="nav-link active" href="{% url 'crud_categorias' %}">⚙️ CRUD Categorías</a>
+          {% endif %}
+          <div class="dropdown">
+            <a class = "nav-link dropdown-toggle" href = "#" role = "button" id = "dropdownMenuLink" data-bs-toggle = "dropdown" aria-expanded = "false">
+              {{ user.username }}
+            </a>
+            <div class = "dropdown-menu" aria-labelledby = "navbarDropdown">
+              <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="dropdown-item">Cerrar sesión</button>
+              </form>
+            </div>
+          </div>
+          {% else %}
+            <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="{% url 'login' %}" id="link-iniciar-sesion">Iniciar sesión</a></button>
+          {% endif %}
         </div>
       </div>
     </nav>
   </div>
 
   <!-- Contenido -->
-  <div class="container-extend-lg" id="contenido"> <!-- Aquí se cargará el contenido de las páginas -->
-    <div class="container">
-      <h1>Añadir Producto</h1>
-      <form action="{% url 'add_producto' %}" method="post" enctype="multipart/form-data">
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Añadir Producto</h1>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form action="{% url 'add_producto' %}" method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          {{form.as_p}}
-          <input type="submit" value="Agregar">
-      </form>
-
-      <p>{{mensaje}}</p>
-
-      <a href="{% url 'productos_list' %}">Regresar</a>    
-    </div> <!-- Fin del contenido -->
-
-  <!-- Footer -->
-  <div id="footer" style="margin-top: 200px;">
-    <!-- Pie de pagina -->
-    <footer class="footer">
-      <ul class="social-icon">
-        <li class="icon-elem">
-          <a href="https://github.com/Lala-Banana/Prueba-2-Progra-Web" class="icon">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-        </li>
-        <li class="icon-elem">
-          <a href="https://github.com/Lala-Banana/Prueba-2-Progra-Web" class="icon">
-            <ion-icon name="logo-youtube"></ion-icon>
-          </a>
-        </li>
-        <li class="icon-elem">
-          <a href="https://github.com/Lala-Banana/Prueba-2-Progra-Web" class="icon">
-            <ion-icon name="logo-github"></ion-icon>
-          </a>
-        </li>
-      </ul>
-      <ul class="menu">
-        <li class="menu-elem">
-          <a href="https://github.com/Lala-Banana/Prueba-2-Progra-Web" class="menu-icon">Contacto</a>
-        </li>
-        <li class="menu-elem">
-          <a href="https://github.com/Lala-Banana/Prueba-2-Progra-Web" class="menu-icon">Equipo</a>
-        </li>
-        <li class="menu-elem">
-          <a href="indice.html" class="menu-icon">Inicio</a>
-        </li>
-      </ul>
-      <p class="text-footer">@2024 | Todos los derechos reservados</p>
-    </footer>
+          {{ form.as_p }}
+          <div class="d-grid">
+            <input type="submit" value="Agregar" class="btn btn-primary">
+          </div>
+        </form>
+        <div id="idMensajes" class="mt-3">
+          {% if mensaje %}
+            <div class="alert alert-info">{{ mensaje }}</div>
+          {% endif %}
+        </div>
+        <div class="text-center mt-3">
+          <a href="{% url 'productos_list' %}" class="btn btn-secondary">Regresar</a>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <!-- Librerías JS -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- JS en static -->
   <script src="{% static 'tienda/js/tema.js' %}"></script>
-  <script>
-      $(document).ready(function() {
-          $('#Mensaje').fadeOut(5000);
-      });
-  </script>
-
 </body>
-
 </html>
