Arreglado estilo de btón inicio sesión

--- a/tienda/templates/tienda/productos_comprar.html
+++ b/tienda/templates/tienda/productos_comprar.html
@@ -59,7 +59,7 @@
                   </div>
                 </div>
                 {% else %}
-                  <a href="{% url 'login' %}">Iniciar sesión</a>
+                <button type="button" class="btn btn-dark btn-navbar"><a class="text-formulario" href="{% url 'login' %}" id="link-iniciar-sesion">Iniciar sesión</a></button>
                 {% endif %}
             
             <!--  
